--- a/Variables-and-Operators/index.html
+++ b/Variables-and-Operators/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+   <script src="main.js"></script>
+   <!-- <script>console.log("I see this")</script> -->
 </body>
 </html>
